--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path:
   provider: ^6.0.0
   flutter_launcher_icons: ^0.8.0
+  flutter_local_notifications:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
